src/components/inputs/Inputs.scss
// All GTAS code is Copyright 2016, The Department of Homeland Security (DHS), U.S. Customs and Border Protection (CBP).
//
// Please see license.txt for details.

%input-css-properties {
  background-clip: padding-box;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  color: rgb(73, 80, 87);
  border-color: rgb(206, 212, 218);
  display: block;
  font-size: 16px;
  height: 34px;
  line-height: 24px;
  outline-color: rgb(73, 80, 87);
  padding: 6px 12px;
  text-decoration: none solid rgb(73, 80, 87);
  text-size-adjust: 100%;
  transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s,
    -webkit-box-shadow 0.15s ease-in-out 0s;
  width: 100%;
  -webkit-appearance: none;
  column-rule-color: rgb(73, 80, 87);
  -webkit-locale: "en";
  perspective-origin: 270px 19px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-text-emphasis-color: rgb(48, 158, 248);
  -webkit-text-fill-color: rgb(73, 80, 87);
  -webkit-text-stroke-color: rgb(73, 80, 87);
  transform-origin: 270px 19px 0px;
  caret-color: rgb(73, 80, 87);
  max-width: 100%;
}

.form-input {
  @extend %input-css-properties;
}
.date-picker-container input {
  @extend %input-css-properties;
}
.react-datetime-picker {
  width: 100%;
  height: calc(1.2em + 0.75rem + 2px);
  border-color: rgb(206, 212, 218);
  background-color: white;
  color: rgb(73, 80, 87);
  border-radius: 5px;
}
.react-datetime-picker__wrapper {
  border-radius: 4px;
  border-color: rgb(206, 212, 218) !important;
}
.react-datetime-picker__calendar--open {
  top: 100% !important;
  bottom: unset !important;
}
.react-datetime-picker__inputGroup__input:focus {
  border: 0;
}
.form-input:focus {
  border-color: #80bdff;
  outline: 0;
  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.txtlabel {
  float: left;
  align-self: center !important;
}

.form-select {
  display: block;
  width: 100%;
  height: calc(1.2em + 0.75rem + 2px);
  padding: 0.175rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.form-static {
  width: 100%;
  height: calc(1.5em + 0.75rem + 2px);
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: 0.25rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.form-multi-select {
  display: block;
  width: 100%;
  color: #495057;
  --rmsc-height: inherit !important;
}

.filter hr {
  margin-top: 0.3rem !important;
  margin-bottom: 0.3rem !important;
}

.dropdown-heading-value {
  white-space: unset !important;
}

